--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <body>
   <div class="conteiner">
     <header>
-      <img src="/images/logo.svg" class="logo">
+      <img src="./images/logo.svg" class="logo">
       <nav>
-        <img src="/images/icon-hamburger.svg" class="hamburger" id="burger">
+        <img src="./images/icon-hamburger.svg" class="hamburger" id="burger">
         <ul class="nav-ul">
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
@@ -40,7 +40,7 @@
     </header>
     <div class="header-img">
       <h1>We are creatives</h1>
-      <img src="/images/icon-arrow-down.svg" class="arrow">
+      <img src="./images/icon-arrow-down.svg" class="arrow">
     </div>
     <main>
       <div class="main-cont">
@@ -81,7 +81,7 @@
       <h2>Client testimonials</h2>
       <div class="person-info">
         <div class="person-conte">
-          <img src="/images/image-emily.jpg">
+          <img src="./images/image-emily.jpg">
           <p> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were
             always
             hit.</p>
@@ -89,14 +89,14 @@
           <span>Marketing Director</span>
         </div>
         <div class="person-conte">
-          <img src="/images/image-thomas.jpg">
+          <img src="./images/image-thomas.jpg">
           <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and
             enjoyable experience.</p>
           <h3>Thomas S.</h3>
           <span>Chief Operating Officer</span>
         </div>
         <div class="person-conte">
-          <img src="/images/image-jennie.jpg">
+          <img src="./images/image-jennie.jpg">
           <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
           </p>
           <h3>Jennie F.</h3>
@@ -111,17 +111,17 @@
       <div class="sugar"></div>
     </div>
     <footer>
-      <img src="/images/logo.svg" class="logo-footer">
+      <img src="./images/logo.svg" class="logo-footer">
       <ul class="footer-nav">
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
       </ul>
       <div class="social">
-        <img src="/images/icon-facebook.svg">
-        <img src="/images/icon-instagram.svg">
-        <img src="/images/icon-twitter.svg">
-        <img src="/images/icon-pinterest.svg">
+        <img src="./images/icon-facebook.svg">
+        <img src="./images/icon-instagram.svg">
+        <img src="./images/icon-twitter.svg">
+        <img src="./images/icon-pinterest.svg">
       </div>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
